--- a/threejs/busniess.html
+++ b/threejs/busniess.html
@@ -85,8 +85,8 @@
 				}
 			}
 		</script>
-    <script type="module" src="/nipplejs.min.js"></script>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="nipplejs.min.js"></script>
+    <script type="module" src="main.js"></script>
 		<!-- <a-scene>
 
 			<img id="button" src="clickhere.png">
@@ -106,25 +106,25 @@
       import * as THREE from 'three';
 
 
-			import Stats from '/three/examples/jsm/libs/stats.module.js';
+			import Stats from 'three/examples/jsm/libs/stats.module.js';
 
-			import { GLTFLoader } from '/three/examples/jsm/loaders/GLTFLoader.js';
+			import { GLTFLoader } from 'three/examples/jsm/loaders/GLTFLoader.js';
 
       
 
-			import { Octree } from '/three/examples/jsm/math/Octree.js';
-			import { OctreeHelper } from '/three/examples/jsm/helpers/OctreeHelper.js';
+			import { Octree } from 'three/examples/jsm/math/Octree.js';
+			import { OctreeHelper } from 'three/examples/jsm/helpers/OctreeHelper.js';
 
 			import { Capsule } from '/three/examples/jsm/math/Capsule.js';
-			import { RectAreaLightUniformsLib } from '/three/examples/jsm/lights/RectAreaLightUniformsLib.js';
-			import { RectAreaLightHelper } from '/three/examples/jsm/helpers/RectAreaLightHelper.js';
+			import { RectAreaLightUniformsLib } from 'three/examples/jsm/lights/RectAreaLightUniformsLib.js';
+			import { RectAreaLightHelper } from 'three/examples/jsm/helpers/RectAreaLightHelper.js';
 		
 
 
 // import {OrbitControls} from '/three/examples/jsm/controls/OrbitControls.js';
 			
-			import { GUI } from '/three/examples/jsm/libs/lil-gui.module.min.js';
-			import { RGBELoader } from '/three/examples/jsm/loaders/RGBELoader.js';
+			import { GUI } from 'three/examples/jsm/libs/lil-gui.module.min.js';
+			import { RGBELoader } from 'three/examples/jsm/loaders/RGBELoader.js';
 
 
 			const clock = new THREE.Clock();
